{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 16,
  "lineage": "b12f13b5-e873-379c-779c-20a0a4bea62d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:internet-gateway/igw-0e8aaef2b46a82801",
            "id": "igw-0e8aaef2b46a82801",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0678f09bc9d9e8590"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072bd6f329a3fb16e",
            "owner_id": "920394549028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8aaef2b46a82801",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0678f09bc9d9e8590"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055db64236723a68c",
            "route_table_id": "rtb-072bd6f329a3fb16e",
            "subnet_id": "subnet-0e33eff65ce7b91d1"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f10b7fb82023f0",
            "route_table_id": "rtb-072bd6f329a3fb16e",
            "subnet_id": "subnet-0b4e46faad52b2b00"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:security-group/sg-07964e41a987d5a10",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07964e41a987d5a10",
            "ingress": [
              {
                "cidr_blocks": [
                  "66.44.22.104/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0678f09bc9d9e8590"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-0e33eff65ce7b91d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e33eff65ce7b91d1",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0678f09bc9d9e8590"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-0b4e46faad52b2b00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b4e46faad52b2b00",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0678f09bc9d9e8590"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:vpc/vpc-0678f09bc9d9e8590",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060a6c9984f2d127a",
            "default_route_table_id": "rtb-0f31059e0df52e7c7",
            "default_security_group_id": "sg-0078e52e355957601",
            "dhcp_options_id": "dopt-1c903d7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0678f09bc9d9e8590",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f31059e0df52e7c7",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}